# Secondary-Memory-Data-Management-PUCMINAS-AEDSIII

./: .gitignore  CMakeLists.txt  README.md
data/: students.idx
data-compress/: backup_huffman.huff  backup_lzw.lzw
diagrams/: url.txt
src/: main.cpp
src/dao/: EmailDAO.cpp  ModuleDAO.cpp  PhoneDAO.cpp  RegistrationDAO.cpp  StudentDAO.cpp  TeacherDAO.cpp  UserDAO.cpp
src/data-compress/: backup_huffman.huff
src/indexes/btree/: BPlusTree.cpp  BPlusTree.h
src/indexes/hash/: ExtendableHash.h  HashBucket.h  HashDirectory.h
src/models/: Email.h  Module.h  Phone.h  Registration.h  Student.h  Teacher.h  User.h
src/utils/: CrudTemplate.h  ExtendableHash.h  FileManager.h
src/utils/compression/: BackupManager.h  Huffman.h  LZW.h
src/utils/crypto/: XorCipher.h
src/utils/pattern/: BoyerMoore.h  KMP.h
src/views/: TeacherWindow.cpp  TeacherWindow.h  teacherwindow.ui
src/views/gui/: Daos.h  GuiApp.h  LoginWindow.h  ManagerWindow.h  ProfessorWindow.h  StudentWindow.h  style.qss
src/views/terminal-interface/: BackupInterface.h  MenuOptions.h  ModuleInterface.h  RegistrationInterface.h  SearchInterface.h  StudentInterface.h  UserInterface.h
